--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="images/logo.webp" alt="LINGO" class="lingo-logo">
     </div>
 
-    <div class="game-result">Well played, you have found my word!</div>
+    <div id="game-result">Well played, you have found my word!</div>
 
     <div class="play">
         <div class="letters" id="js-11"></div>
@@ -47,7 +47,7 @@
         <div class="letters" id="js-54"></div>
       </div>
 
-    <div class="newgame">tap here to start a new game</div>
+    <div id="newgame" onclick="confirm('play-again')">tap here to start a new game</div>
     
     <div class="keyboard">
 
@@ -77,7 +77,7 @@
       </div>
 
       <div class="row3">
-        <div class="keys2" onclick="enterLetter('ENT')">ENT</div>
+        <div class="keys2" id="enter" onclick="confirm('ENTER')">ENT</div>
         <div class="keys" onclick="enterLetter('Z')">Z</div>
         <div class="keys" onclick="enterLetter('X')">X</div>
         <div class="keys" onclick="enterLetter('C')">C</div>
@@ -85,12 +85,14 @@
         <div class="keys" onclick="enterLetter('B')">B</div>
         <div class="keys" onclick="enterLetter('N')">N</div>
         <div class="keys" onclick="enterLetter('M')">M</div>
-        <div class="keys2" onclick="enterLetter('DEL')">DEL</div>
+        <div class="keys2" onclick="confirm('DEL')">DEL</div>
       </div>
     </div>
   </div>
   
+  <script src="scripts/words.js"></script>
   <script src="scripts/script.js"></script>
+  
 </body>
 
 </html>
