--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <img src="images/logo.webp" alt="LINGO" class="lingo-logo">
     </div>
 
-    <div id="game-result">Well played, you have found my word!</div>
+    <div id="game-result"></div>
 
     <div class="play">
         <div class="letters" id="js-11"></div>
@@ -47,7 +47,7 @@
         <div class="letters" id="js-54"></div>
       </div>
 
-    <div id="newgame" onclick="confirm('play-again')">tap here to start a new game</div>
+    <div id="newgame" onclick="confirm('play-again')">Tap here to start a new game</div>
     
     <div class="keyboard">
 
